# gl4cookbook

./: .gitignore  .gitmodules  CMakeLists.txt
boilerplate/: CMakeLists.txt  main.cpp
chapter01/: CMakeLists.txt  SceneBasic.cpp  SceneBasic.h  SceneBasic_Attrib.cpp  SceneBasic_Attrib.h  SceneBasic_Uniform.cpp  SceneBasic_Uniform.h  SceneBasic_UniformBlock.cpp  SceneBasic_UniformBlock.h  main.cpp
chapter02/: CMakeLists.txt  SceneADS.cpp  SceneADS.h  SceneDiffuse.cpp  SceneDiffuse.h  SceneDiscard.cpp  SceneDiscard.h  SceneFlat.cpp  SceneFlat.h  SceneSubroutine.cpp  SceneSubroutine.h  SceneTwoSide.cpp  SceneTwoSide.h  main.cpp
chapter02/shader/: diffuse.vert  discard.frag  discard.vert  flat.vert  phong-function.vert  phong.vert  subroutine.vert  twoside.vert
chapter03/: CMakeLists.txt  SceneDirectional.cpp  SceneDirectional.h  SceneFog.cpp  SceneFog.h  SceneMultiLight.cpp  SceneMultiLight.h  ScenePerFragment.cpp  ScenePerFragment.h  SceneSpot.cpp  SceneSpot.h  SceneToon.cpp  SceneToon.h  main.cpp
chapter03/shader/: directional.vert  fog.frag  multilight.vert  perfrag-halfwayVec.frag  perfrag.frag  spot.frag  spot.vert  toon.frag
chapter04/: CMakeLists.txt  SceneAlphaTest.cpp  SceneAlphaTest.h  SceneMultiTex.cpp  SceneMultiTex.h  SceneNormalMap.cpp  SceneNormalMap.h  SceneProjTex.cpp  SceneProjTex.h  SceneReflectCube.cpp  SceneReflectCube.h  SceneRefractCube.cpp  SceneRefractCube.h  SceneRenderToTex.cpp  SceneRenderToTex.h  SceneSamplerObj.cpp  SceneSamplerObj.h  SceneTexture.cpp  SceneTexture.h  SkyBox.cpp  SkyBox.h  main.cpp
chapter04/shader/: alphatest.frag  alphatest_41.frag  cubemap_refract.vert  cubemap_refract_41.frag  cubemap_refract_41.vert  multitex.frag  normalmap.vert  projtex.frag  projtex.vert  rendertotex.frag  texture.frag
chapter05/: CMakeLists.txt  SceneBlur.cpp  SceneBlur.h  SceneDeferred.cpp  SceneDeferred.h  SceneEdge.cpp  SceneEdge.h  SceneGamma.cpp  SceneGamma.h  SceneHdrBloom.cpp  SceneHdrBloom.h  SceneMsaa.cpp  SceneMsaa.h  SceneOit.cpp  SceneOit.h  SceneToneMap.cpp  SceneToneMap.h  main.cpp
chapter05/shader/: blur.frag  blur_41.frag  edge.frag  edge_41.frag  hdrbloom.frag  tonemap.frag  tonemap_41.frag
chapter06/: CMakeLists.txt  SceneBezCurve.cpp  SceneBezCurve.h  ScenePointSprit.cpp  ScenePointSprit.h  SceneQuadTess.cpp  SceneQuadTess.h  SceneShadeWire.cpp  SceneShadeWire.h  SceneSilhouette.cpp  SceneSilhouette.h  SceneTessTeapot.cpp  SceneTessTeapot.h  SceneTessTeapotDepth.cpp  SceneTessTeapotDepth.h  main.cpp
chapter06/shader/: pointsprite.fs  pointsprite.gs  pointsprite.vs  shadewire.fs  shadewire.gs  shadewire.vs  silhouette.gs  tessteapot.tes  tessteapotdepth.tes
chapter07/: CMakeLists.txt  SceneAo.cpp  SceneAo.h  SceneJitter.cpp  SceneJitter.h  ScenePcf.cpp  ScenePcf.h  SceneShadowMap.cpp  SceneShadowMap.h  SceneShadowVolume.cpp  SceneShadowVolume.h  frustum.cpp  frustum.h  main.cpp
chapter07/shader/: pcf.frag  shadowmap.vert  shadowvolume-comp.fs  shadowvolume-comp.vs  shadowvolume-render.fs  shadowvolume-render.vs  shadowvolume-vol.fs  shadowvolume-vol.gs  shadowvolume-vol.vs
chapter08/: CMakeLists.txt  SceneDecay.cpp  SceneDecay.h  SceneNightVision.cpp  SceneNightVision.h  SceneNoise.cpp  SceneNoise.h  ScenePaint.cpp  ScenePaint.h  SceneSky.cpp  SceneSky.h  SceneWood.cpp  SceneWood.h  main.cpp  noisetex.cpp  noisetex.h
chapter08/shader/: decay.frag  nightvision.frag  paint.frag  wood.frag  wood.vert
chapter09/: CMakeLists.txt  SceneFire.cpp  SceneFire.h  SceneParticles.cpp  SceneParticles.h  SceneParticlesFeedback.cpp  SceneParticlesFeedback.h  SceneParticlesInstanced.cpp  SceneParticlesInstanced.h  SceneSmoke.cpp  SceneSmoke.h  SceneWave.cpp  SceneWave.h  main.cpp
chapter09/shader/: particleinstanced.frag  particleinstanced.vert  particles.frag  particles.vert  smoke.frag  smoke.vert  transfeedback.frag  transfeedback.vert  wave.frag  wave.vert
chapter10/: CMakeLists.txt  SceneCloth.cpp  SceneCloth.h  SceneEdge.cpp  SceneEdge.h  SceneMandelbrot.cpp  SceneMandelbrot.h  SceneParticles.cpp  SceneParticles.h  main.cpp
chapter10/shader/: edge.cs  edge.fs
common/: bmpreader.h  glslprogram.h  glutils.cpp  glutils.h  scene.h  tgaio.h
common/Meshes/: vbocube.cpp  vbomesh.cpp  vbomesh.h  vbomeshadj.cpp  vbomeshadj.h  vboplane.cpp  vbosphere.cpp  vbosphere.h  vboteapot.cpp  vboteapotpatch.cpp  vbotorus.cpp
